added some global styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <h1>Brooks Tiffany</h1>
+    <section>
+        <h1>Brooks Tiffany</h1>
+    </section>
 </body>
 
 </html>
