--- a/index.html
+++ b/index.html
@@ -10,9 +10,28 @@
 </head>
 
 <body>
-    <section>
-        <h1>Brooks Tiffany</h1>
-    </section>
+
+    <header>
+        <nav>
+            <ul id="navbar">
+                <li><a href="index.html">Brooks Tiffany</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <footer>
+        <h2>Brooks Tiffany | Frontend Developer</h2>
+        <ul>
+            <li><a href="">LinkedIn</a></li>
+            <li><a href="">GitHub</a></li>
+            <li><a href="">Email</a></li>
+        </ul>
+        <p>&copy; 2023 Brooks Tiffany</p>
+    </footer>
 </body>
 
 </html>
