added padding to sections and added fontawesome icons

--- a/index.html
+++ b/index.html
@@ -23,15 +23,22 @@
         </nav>
     </header>
 
+    <section id="hero">
+        <h1>Hi there, I'm Brooks!</h1>
+        <h2>I'm a Frontend Developer with a UX background</h2>
+    </section>
+
     <footer>
         <h2>Brooks Tiffany | Frontend Developer</h2>
         <ul>
-            <li><a href="">LinkedIn</a></li>
-            <li><a href="">GitHub</a></li>
-            <li><a href="">Email</a></li>
+            <li><a href=""><i class="fa-brands fa-linkedin fa-2xl" style="color: #ffffff;"></i></a></li>
+            <li><a href=""><i class="fa-brands fa-square-github fa-2xl" style="color: #ffffff;"></i></a></li>
+            <li><a href=""><i class="fa-solid fa-envelope fa-2xl" style="color: #ffffff;"></i></a></li>
         </ul>
         <p>&copy; 2023 Brooks Tiffany</p>
     </footer>
+
+    <script src="https://kit.fontawesome.com/db66bf7d72.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
