updated fonts, colors, sizes and links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Brooks Tiffany's personal website.">
     <title>Brooks Tiffany</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,25 +19,28 @@
     <header>
         <nav>
             <ul id="navbar">
-                <li><a href="index.html">Brooks Tiffany</a></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li id="logo"><a href="index.html"><i class="fa-solid fa-laptop-code fa" style="color: #05f2f2;"></i>
+                        brooks-tiffany</a></li>
+                <li class="nav-buttons"><a href="index.html">Home</a></li>
+                <li class="nav-buttons"><a href="about.html">About</a></li>
+                <li class="nav-buttons"><a href="projects.html">Projects</a></li>
+                <li class="nav-buttons"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="hero">
-        <h1>Hi there, I'm Brooks!</h1>
-        <h2>I'm a Frontend Developer with a UX background</h2>
+        <h1>Hi there, I'm Brooks.</h1>
+        <h2>I'm a Frontend Developer with a UX background.</h2>
     </section>
 
     <footer>
         <h2>Brooks Tiffany | Frontend Developer</h2>
         <ul>
-            <li><a href=""><i class="fa-brands fa-linkedin fa-2xl" style="color: #ffffff;"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-square-github fa-2xl" style="color: #ffffff;"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/brookstiffany/"><i class="fa-brands fa-linkedin fa-2xl"
+                        style="color: #ffffff;"></i></a></li>
+            <li><a href="https://github.com/brooks-t"><i class="fa-brands fa-square-github fa-2xl"
+                        style="color: #ffffff;"></i></a></li>
             <li><a href=""><i class="fa-solid fa-envelope fa-2xl" style="color: #ffffff;"></i></a></li>
         </ul>
         <p>&copy; 2023 Brooks Tiffany</p>
