added profile image, updated styles to mobile first

--- a/index.html
+++ b/index.html
@@ -30,9 +30,26 @@
     </header>
 
     <section id="hero">
-        <h1>Hi there, I'm Brooks.</h1>
+        <h1>Hi, I'm Brooks.</h1>
         <h2>I'm a Frontend Developer with a UX background.</h2>
     </section>
+
+    <div class="alt-background">
+        <section id="about-me">
+            <h2>About Brooks</h2>
+            <div id="profile">
+                <img src="images/brooks-tiffany.jpg" alt="Brooks Tiffany">
+                <p>Hi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis laudantium eum quis
+                    necessitatibus a
+                    sit, quas placeat dolor ut ex tempora cupiditate eos reiciendis eaque delectus cumque ipsum
+                    doloribus saepe.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis laudantium eum quis necessitatibus a
+                    sit, quas placeat dolor ut ex tempora cupiditate eos reiciendis eaque delectus cumque ipsum
+                    doloribus saepe.
+                </p>
+            </div>
+        </section>
+    </div>
 
     <footer>
         <h2>Brooks Tiffany | Frontend Developer</h2>
