added skills and tools section and styled it, started up projects section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,66 @@
 
     <div class="alt-background">
         <section id="about-me">
-            <h2>About Brooks</h2>
+            <h2>About Me</h2>
+            <div id="profile">
+                <img src="images/brooks-tiffany.jpg" alt="Brooks Tiffany">
+                <p>Hi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis laudantium eum quis
+                    necessitatibus a
+                    sit, quas placeat dolor ut ex tempora cupiditate eos reiciendis eaque delectus cumque ipsum
+                    doloribus saepe.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis laudantium eum quis necessitatibus a
+                    sit, quas placeat dolor ut ex tempora cupiditate eos reiciendis eaque delectus cumque ipsum
+                    doloribus saepe.
+                </p>
+            </div>
+        </section>
+    </div>
+
+    <section id="skills">
+        <h2>My Skills and Tools</h2>
+        <p>The technologies I use to build things.</p>
+        <div id="skill-container">
+            <figure class="skill-icons">
+                <i class="fa-brands fa-html5 fa-5x" style="color: #ffc17a;"></i>
+                <figcaption>HTML5</figcaption>
+            </figure>
+            <figure class="skill-icons">
+                <i class="fa-brands fa-css3-alt fa-5x" style="color: #ffc17a;"></i>
+                <figcaption>CSS3</figcaption>
+            </figure>
+            <figure class="skill-icons">
+                <i class="fa-brands fa-js fa-5x" style="color: #ffc17a;"></i>
+                <figcaption>JavaScript</figcaption>
+            </figure>
+            <figure class="skill-icons">
+                <i class="fa-brands fa-react fa-5x" style="color: #ffc17a;"></i>
+                <figcaption>React</figcaption>
+            </figure>
+            <figure class="skill-icons">
+                <i class="fa-brands fa-bootstrap fa-5x" style="color: #ffc17a;"></i>
+                <figcaption>Bootstrap</figcaption>
+            </figure>
+            <figure class="skill-icons">
+                <i class="fa-brands fa-sass fa-5x" style="color: #ffc17a;"></i>
+                <figcaption>Sass</figcaption>
+            </figure>
+            <figure class="skill-icons">
+                <i class="fa-brands fa-git-alt fa-5x" style="color: #ffc17a;"></i>
+                <figcaption>Git</figcaption>
+            </figure>
+            <figure class="skill-icons">
+                <i class="fa-brands fa-square-github fa-5x" style="color: #ffc17a;"></i>
+                <figcaption>Github</figcaption>
+            </figure>
+            <figure class="skill-icons">
+                <i class="fa-solid fa-terminal fa-5x" style="color: #ffc17a;"></i>
+                <figcaption>Terminal</figcaption>
+            </figure>
+        </div>
+    </section>
+    <div class="alt-background">
+        <section id="about-me">
+            <h2>Projects</h2>
             <div id="profile">
                 <img src="images/brooks-tiffany.jpg" alt="Brooks Tiffany">
                 <p>Hi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis laudantium eum quis
